Fix vert spacing

--- a/src/app/components/mosaic/mosaic.component.scss
+++ b/src/app/components/mosaic/mosaic.component.scss
@@ -31,6 +31,7 @@ mat-form-field {
     flex-grow: 1;
     flex-basis: 30%;
     height: fit-content;
+    margin-bottom: 10px;
 }
 
 .example-margin {
@@ -73,7 +74,7 @@ mat-form-field {
 .totalPage {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    // gap: 10px;
 }
 
 .error {
